# SPM

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  Readme.make  SVN commit guide.txt  build.bat  doMake.bat  makeLinux.bat
Debug/: makefile  objects.mk  sources.mk
Debug/src/: subdir.mk
R-libraries/: Build.bat  SPM_make_version.R  Splus_source.S  make_version.R  run-roxygen.R  spmTest_make_version.R  update_packages.R
R-libraries/spm/: DESCRIPTION  NAMESPACE  TITLE
R-libraries/spmTest/: DESCRIPTION  NAMESPACE
TestCases/: run.bat
TestCases/1x1_Examples/: run.bat
TestCases/2x3_Examples/: run.bat
TestCases/3x3_Examples/: run.bat
TestCases/RossSea/: run.bat
TestCases/case0/: Base.map  CPUE.map  Depth.map  Fishing_1998.map  Fishing_1999.map  Fishing_2000.map  Fishing_2001.map  Fishing_2002.map  Fishing_2003.map  Fishing_2004.map  Fishing_2005.map  Fishing_2006.map  Fishing_2007.map  Latitude.map  Quality.map  SSRU.map  alpha.txt  config.spm  constant.map  estimation.spm  objective_function.txt  population.spm  run.bat  state-2004-1.txt  state-2008-1.txt  state-2008-2.txt  state_1998_1.txt  test.map
TestCases/validate/: run.bat
autobuild/: .gitignore  CMakeLists.txt
doc/: SPM High Level Design.doc
doc/Development/: Dijkstra.R  MathParsers.docx  SPM changes 2012 SM.docx  SPM runs only 1 iteration with the spm.docx  dijstra_script.R  parser.cpp  parser.h
doc/manual/: Acknowledgments.tex  Build.bat  ChangesEnhancements.tex  EULA.tex  Estimation.tex  Examples.tex  GettingStarted.tex  Introduction.tex  License.tex  Observation.tex  Output.tex  Overview.tex  Population.tex  PostProcessing.tex  QuickReference.py  QuickReference.tex  References.tex  Report.tex  RunningSPM.tex  SPM.bib  SPM.syn  SPM.tco  SPM.tcp  SPM.tex  SPMversion.tex  Troubleshooting.tex  clean.bat  makefile  syntax_errors.txt  version.bat  version.tex
examples/1x1/: MPD.dat.phase_0  config.spm  estimation.spm  observations.spm  reports.spm  run.bat  simulated_observations.spm  simulation-reports.spm
examples/Hake/: estimation.csl  population.csl  report.spm
examples/complex_spatial/: config.spm
examples/simple_spatial/: config.spm  estimation.spm  observations.spm  report.spm  run.bat  simulated_observations.spm  simulation_reports.spm
installer/: Readme.make  Readme.txt  SPM.nsi  makeInstall.bat  run SPM.lnk  version.nsi  version.py
installer/Modules/: fileassoc.nsh
src/: CConfiguration.cpp  CConfiguration.h  CDirectedProcessManager.cpp  CDirectedProcessManager.h  CEstimateManager.cpp  CEstimateManager.h  CInitializationManager.cpp  CInitializationManager.h  CLayerManager.cpp  CLayerManager.h  CMinimizerManager.cpp  CMinimizerManager.h  CObservationManager.cpp  CObservationManager.h  CPLv1.0.txt  CPenaltyManager.cpp  CPenaltyManager.h  CPrintStateManager.cpp  CPrintStateManager.h  CPriorManager.cpp  CPriorManager.h  CProcessManager.cpp  CProcessManager.h  CProfileManager.cpp  CProfileManager.h  CQManager.cpp  CQManager.h  CRuntimeController.cpp  CRuntimeController.h  CSelectivityManager.cpp  CSelectivityManager.h  CTimeStepManager.cpp  CTimeStepManager.h  CWorld.cpp  CWorld.h  License.txt  Main.cpp  Version.h  default_version.h  spm.rc
src/AgeSize/: CAgeSize.cpp  CAgeSize.h  CAgeSizeManager.cpp  CAgeSizeManager.h
src/AgeingError/: CAgeingError.cpp  CAgeingError.h  CAgeingErrorManager.cpp  CAgeingErrorManager.h
src/BaseClasses/: CBaseBuild.cpp  CBaseBuild.h  CBaseBuildableObject.cpp  CBaseBuildableObject.h  CBaseExecutableObject.cpp  CBaseExecutableObject.h  CBaseExecute.cpp  CBaseExecute.h  CBaseManager.cpp  CBaseManager.h  CBaseObject.cpp  CBaseObject.h  CBaseValidate.cpp  CBaseValidate.h
src/Catchabilities/: CCatchability.Test.cpp  CCatchability.cpp  CCatchability.h  CCatchabilityManager.cpp  CCatchabilityManager.h  CQ.cpp  CQManager.cpp
src/ConfigLoaders/: CBaseConfigLoader.cpp  CBaseConfigLoader.h  CEstimateValueConfigLoader.cpp  CEstimateValueConfigLoader.h  CEstimationConfigLoader.cpp  CEstimationConfigLoader.h  COutputConfigLoader.cpp  COutputConfigLoader.h  CPopulationConfigLoader.cpp  CPopulationConfigLoader.h
src/ConfigurationLoaders/: CConfigurationLoader.Test.cpp  CConfigurationLoader.cpp  CConfigurationLoader.h
src/DerivedLayers/: CDerivedLayer.cpp  CDerivedLayer.h  CDerivedLayerManager.cpp  CDerivedLayerManager.h
src/DerivedQuantities/: CDerivedQuantity.Test.cpp  CDerivedQuantity.cpp  CDerivedQuantity.h  CDerivedQuantityManager.cpp  CDerivedQuantityManager.h
src/DerivedQuantitiesByCell/: CDerivedQuantityByCell.cpp  CDerivedQuantityByCell.h  CDerivedQuantityByCellManager.cpp  CDerivedQuantityByCellManager.h
src/DirectedProcesses/: CConstantDirectedProcess.cpp  CConstantDirectedProcess.h  CDirectedProcess.cpp  CDirectedProcess.h  CDirectedProcessManager.cpp  CDirectedProcessManager.h  CDoubleNormalDirectedProcess.cpp  CDoubleNormalDirectedProcess.h  CExponentialDirectedProcess.cpp  CExponentialDirectedProcess.h  CInverseLogisticDirectedProcess.cpp  CInverseLogisticDirectedProcess.h  CLogisticDirectedProcess.cpp  CLogisticDirectedProcess.h  CNormalDirectedProcess.cpp  CNormalDirectedProcess.h  CThresholdDirectedProcess.cpp  CThresholdDirectedProcess.h
src/Distributions/: CNormalDistribution.cpp  CNormalDistribution.h
src/Estimates/: CEstimate.cpp  CEstimate.h  CEstimateInfo.Test.cpp  CEstimateInfo.cpp  CEstimateInfo.h  CEstimateManager.cpp  CEstimateManager.h
src/Helpers/: CComparer.cpp  CComparer.h  CCompoundCategories.cpp  CCompoundCategories.h  CConvertor.cpp  CConvertor.h  CError.cpp  CError.h  CMath.cpp  CMath.h  CSpline.h  DefinedValues.h  ForEach.h
src/InitializationPhases/: CInitializationPhase.cpp  CInitializationPhase.h  CInitializationPhaseManager.cpp  CInitializationPhaseManager.h
src/Layers/: CLayer.cpp  CLayer.h  CLayerManager.cpp  CLayerManager.h  CNumericLayer.cpp  CNumericLayer.h  CStringLayer.cpp  CStringLayer.h
src/Likelihoods/: CLikelihood.cpp  CLikelihood.h
src/MCMC/: CMCMC.cpp  CMCMC.h  CMCMCManager.cpp  CMCMCManager.h
src/Minimizers/: CHessian.cpp  CHessian.h  CMinimizer.cpp  CMinimizer.h  (+2 more)
(+1953 files in other folders)
